--- a/relative-motion.html
+++ b/relative-motion.html
@@ -7,6 +7,9 @@
     },
     svg: {
       fontCache: 'global'
+    },
+    loader: {
+    load: ['output/svg']
     }
   };
 </script>
@@ -207,6 +210,7 @@
 </body>
 
 </html>
+
 
 
 
