--- a/relative-motion.html
+++ b/relative-motion.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-
-<script>
-  MathJax = {
-    tex: {
-      inlineMath: [['$', '$'], ['\\(', '\\)']]
-    },
-    svg: {
-      fontCache: 'global'
-    },
-    loader: {
-    load: ['output/svg']
-    }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
-
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  
+  <script>
+  window.MathJax = {
+    loader: {load: ['input/tex', 'output/svg']},
+    tex: {inlineMath: [['$', '$'], ['\\(', '\\)']]},
+    svg: {
+      fontCache: 'local',
+      scale: 1,
+    }
+  };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Relative Motion</title>
   <link rel="stylesheet" href="styles.css" />
@@ -210,6 +207,7 @@
 </body>
 
 </html>
+
 
 
 
