--- a/relative-motion.html
+++ b/relative-motion.html
@@ -184,14 +184,22 @@
       From the MEEs, the change (or differential) of each element is found. This ultimately provides the IDOEs. Note that the subscript "i" refers to the interceptor satellite while the subscript "c" refers to the chief satellite.
     </p>
     $$
-    \begin{aligned}
-    \Delta p &= p_i - p_c \\
-    \Delta f &= f_i - f_c \\
-    \Delta g &= g_i - g_c \\
-    \Delta h &= h_i - h_c \\
-    \Delta k &= k_i - k_c \\
+    \Delta p &= p_i - p_c
+    $$
+    $$
+    \Delta f &= f_i - f_c
+    $$
+    $$
+    \Delta g &= g_i - g_c
+    $$
+    $$
+    \Delta h &= h_i - h_c
+    $$
+    $$
+    \Delta k &= k_i - k_c
+    $$
+    $$
     \Delta L &= L_i - L_c
-    \end{aligned}
     $$
     <p>
       These elements are useful for using in a propagator as each MEE (except for $L$) is nearly constant during flight when not perturbed by J2 dynamics. Since these elements show a constant behavior, their changes are also constant. For $L$, its result is a linear equation. When taking the change of L ($\Delta L$), it shows that there is a linearly growing motion due to the mean motion. Thus, due to the simplicity of each IDOE value, they can easily be measured and analyzed for accuracy and repetition. 
@@ -207,6 +215,7 @@
 </body>
 
 </html>
+
 
 
 
