--- a/cr3bp.html
+++ b/cr3bp.html
@@ -73,7 +73,7 @@
       </p>
       $$
       \begin{aligned}
-      r_{i+1} &= r_i + v_i\Delta t
+      r_{i+1} &= r_i + v_i\Delta t \\
       v_{i+1} &= v_i + a_i\Delta t
       \end{aligned}
       $$
@@ -91,4 +91,5 @@
 </body>
 
 </html>
+
 
