--- a/relative-motion.html
+++ b/relative-motion.html
@@ -125,8 +125,8 @@
       </p>
       $$
       \begin{aligned}
-      \Delta v_{+} = (\Phi_{v}^{r})^{-1} * (r_{f} - \Phi_{r}^{r} * r_{0}) - v_{0} \\
-      \Delta v_{-} = v_{f} - (\Phi_{r}^{v} * r_{0} + \Phi_{v}^{v} * (v_{0} + \Delta v_{+}))
+      \Delta v_{+} &= (\Phi_{v}^{r})^{-1} * (r_{f} - \Phi_{r}^{r} * r_{0}) - v_{0} \\
+      \Delta v_{-} &= v_{f} - (\Phi_{r}^{v} * r_{0} + \Phi_{v}^{v} * (v_{0} + \Delta v_{+}))
       \end{aligned}
       $$
       <p>
@@ -174,12 +174,12 @@
     </p>
     $$
     \begin{aligned}
-    p = a(1 - e^2) \\
-    f = e\cos(\omega + \Omega) \\
-    g = e\sin(\omega + \Omega) \\
-    h = \tan\left(\frac{i}{2}\right)\cos\Omega \\
-    k = \tan\left(\frac{i}{2}\right)\sin\Omega \\
-    L = \Omega + \omega + M
+    p &= a(1 - e^2) \\
+    f &= e\cos(\omega + \Omega) \\
+    g &= e\sin(\omega + \Omega) \\
+    h &= \tan\left(\frac{i}{2}\right)\cos\Omega \\
+    k &= \tan\left(\frac{i}{2}\right)\sin\Omega \\
+    L &= \Omega + \omega + M
     \end{aligned}
     $$
     <p>
@@ -209,6 +209,7 @@
 </body>
 
 </html>
+
 
 
 
