--- a/relative-motion.html
+++ b/relative-motion.html
@@ -116,7 +116,7 @@
         <img src="Interceptor_Trajectories.png" alt = "Interceptor Trajectories">
         <figcaption><b>Fig. 2</b> The possible trajectories for an interceptor satellite.</figcaption>
       </figure>
-      <h2>Transfer with the HCW Equation</h2>
+      <h2>Transferring with the HCW Equation</h2>
       <h3>Information from Vallado's <i>Fundamentals of Astrodynamics and Applications.</i></h3>
       <p>
         Another benefit of the HCW equation is that the transfer velocities of the interceptor satellite can be found with only the initial and final state vectors. By rearranging the HCW equation, the necessary velocities to complete the transfer are found. The following equations show the two required burns to achieve the final state from the initial state. The change in velocity from the initial state is generally called the positive transfer velocity while the change in velocity for the final state is called the negative transfer velocity.
@@ -207,6 +207,7 @@
 </body>
 
 </html>
+
 
 
 
