--- a/relative-motion.html
+++ b/relative-motion.html
@@ -53,6 +53,9 @@
       <p>
         Relative motion is useful for satellite formations as it shows where each satellite is relative to each other. One example of satellite formation is the Global Position System (GPS), formations are necessary for this system so that there is constant communication with navigation devices on Earth. If not every part of the Earth can reach a satellite, then GPS would not work properly. Thus, the formation needs to be properly managed while in orbit. Viewing the satellites in relative motion allows a person to easily understand where each satellite is and how they need to be properly managed to keep the formation.
       </p>
+      <p>
+        There are many topics within the subject of relative motion. This page will be in constant development until it has completed every topic. For now, the propagation topics are prioritized.
+      </p>
       <h2>Relative Motion Frame</h2>
       <p>
         When analyzing satellites while in the relative motion frame, it is important to understand where the frame is located. There are several names for the relative motion frame, with the two of the most common being the RIC, RSW, LVLH frames. RIC stands for Radial, In-track, and Cross-track. RIC refers to the different directions that a spacecraft is pointing while in orbit. The radial direction comes from drawing a line from the center of the orbit to the spacecraft and continues outward. The in-track direction comes from the forward direction of the spacecraft. The cross-track direction is created from the cross product of the radial and in-track directions. RSW is the same as RIC but uses SW in place of IC for calculation purposes. LVLH stands for Local Vertical and Local Horizontal. It shows the same directions as the RIC setup but calls the radial direction as local vertical and the in-track direction as local horizontal. The following figure shows the chief satellite frame with the RSW naming scheme.
@@ -207,6 +210,7 @@
 </body>
 
 </html>
+
 
 
 
