--- a/index.html
+++ b/index.html
@@ -43,8 +43,19 @@
         <div id="conservedPlot"></div>
       </div>
       <div class="errors">
-        <h3>Errors</h3>
-        <div id="errorPlot"></div>
+        <h3>Example Inputs</h3>
+        <div id="errorPlot">
+          <p>2 Body (μ=368600)</p>
+          <p>eliptic: [-1774, -2787,  6801, 6.2, -1.9, -0.1]</p>
+          <p>hyperbolic: [-5700, -2541, -14869, -4.9, -2.5, -4.4]</p>
+          <hr>
+          <p>3 Body</p>
+          <p>JPL orbits: <a href="https://ssd.jpl.nasa.gov/tools/periodic_orbits.html">3 Body Orbits</a></p>
+          <hr>
+          <p>Relative Motion (any chief eccentricity)</p>
+          <p>stable: [0, 0.001, 0.00835, 0, 0, 0, 10]</p>
+          <p>drifting: [20.5, 0.006, 4.43, 0, 0, 10]</p>
+        </div>
       </div>
     </div>
   </main>
