--- a/examples.html
+++ b/examples.html
@@ -31,6 +31,7 @@
 
     <div class = "reading-body">
       <h1>Examples</h1>
+      <h3>Coming Soon</h3>
     </div>
   </main>
 
@@ -42,3 +43,4 @@
 </body>
 
 </html>
+
